fix(layout): align-content start on main grid to stabilize sideinfo top

--- a/_sass/layout/_content-layout.scss
+++ b/_sass/layout/_content-layout.scss
@@ -6,6 +6,7 @@ main {
     overflow-x: clip;
     flex: 1;
     display: grid;
+    align-content: start;
 }
 
 .nds-content-layout {
